project2/edu/purdue/cs352/minijava/parser/ParserAST.java
/* ParserAST.java */
/* Generated By:JavaCC: Do not edit this line. ParserAST.java */
    package edu.purdue.cs352.minijava.parser;
    import edu.purdue.cs352.minijava.ast.*;
    import java.util.*;

    public class ParserAST implements ParserASTConstants {
        public static void main(String[] args) {
            ParserAST parser;

            if (args.length != 1) {
                System.out.println("Use: mjparse-ast <input file>");
                return;
            }

            try {
                parser = new ParserAST(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException ex) {
                System.out.println("File " + args[0] + " not found.");
                return;
            }

            try {
                parser.Program();
            } catch (ParseException ex) {
                System.out.println(ex.getMessage());
                return;
            }
        }

/* The following is a simple grammar that will allow you to test the generated
 * lexer. */
  final public List<Token> TokenList() throws ParseException {Token t;
    List<Token> tl = new ArrayList<Token>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:
      case KW_PUBLIC:
      case KW_STATIC:
      case KW_VOID:
      case KW_MAIN:
      case KW_STRING:
      case KW_EXTENDS:
      case KW_RETURN:
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_ELSE:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_SYSPRNT:
      case SYM_LBRACE:
      case SYM_RBRACE:
      case SYM_LPAREN:
      case SYM_RPAREN:
      case SYM_LBRACK:
      case SYM_RBRACK:
      case SYM_SEMICOL:
      case SYM_EQ:
      case SYM_LOGAND:
      case SYM_LOGOR:
      case SYM_LESS:
      case SYM_LESSEQ:
      case SYM_EQEQ:
      case SYM_NOTEQ:
      case SYM_GREAT:
      case SYM_GREATEQ:
      case SYM_PLUS:
      case SYM_MINUS:
      case SYM_MULTIL:
      case SYM_DIVIDE:
      case SYM_MOD:
      case SYM_NOT:
      case SYM_DOT:
      case SYM_COMMA:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = Token();
tl.add(t);
    }
    jj_consume_token(0);
{if ("" != null) return tl;}
    throw new Error("Missing return statement in function");
  }

  final public Token Token() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_CLASS:{
      jj_consume_token(KW_CLASS);
      break;
      }
    case KW_PUBLIC:{
      jj_consume_token(KW_PUBLIC);
      break;
      }
    case KW_STATIC:{
      jj_consume_token(KW_STATIC);
      break;
      }
    case KW_VOID:{
      jj_consume_token(KW_VOID);
      break;
      }
    case KW_MAIN:{
      jj_consume_token(KW_MAIN);
      break;
      }
    case KW_STRING:{
      jj_consume_token(KW_STRING);
      break;
      }
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      break;
      }
    case KW_RETURN:{
      jj_consume_token(KW_RETURN);
      break;
      }
    case KW_INT:{
      jj_consume_token(KW_INT);
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      break;
      }
    case KW_ELSE:{
      jj_consume_token(KW_ELSE);
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    case KW_NEW:{
      jj_consume_token(KW_NEW);
      break;
      }
    case KW_SYSPRNT:{
      jj_consume_token(KW_SYSPRNT);
      break;
      }
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      break;
      }
    case SYM_RBRACE:{
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case SYM_LPAREN:{
      jj_consume_token(SYM_LPAREN);
      break;
      }
    case SYM_RPAREN:{
      jj_consume_token(SYM_RPAREN);
      break;
      }
    case SYM_LBRACK:{
      jj_consume_token(SYM_LBRACK);
      break;
      }
    case SYM_RBRACK:{
      jj_consume_token(SYM_RBRACK);
      break;
      }
    case SYM_SEMICOL:{
      jj_consume_token(SYM_SEMICOL);
      break;
      }
    case SYM_EQ:{
      jj_consume_token(SYM_EQ);
      break;
      }
    case SYM_LOGAND:{
      jj_consume_token(SYM_LOGAND);
      break;
      }
    case SYM_LOGOR:{
      jj_consume_token(SYM_LOGOR);
      break;
      }
    case SYM_LESS:{
      jj_consume_token(SYM_LESS);
      break;
      }
    case SYM_LESSEQ:{
      jj_consume_token(SYM_LESSEQ);
      break;
      }
    case SYM_EQEQ:{
      jj_consume_token(SYM_EQEQ);
      break;
      }
    case SYM_NOTEQ:{
      jj_consume_token(SYM_NOTEQ);
      break;
      }
    case SYM_GREAT:{
      jj_consume_token(SYM_GREAT);
      break;
      }
    case SYM_GREATEQ:{
      jj_consume_token(SYM_GREATEQ);
      break;
      }
    case SYM_PLUS:{
      jj_consume_token(SYM_PLUS);
      break;
      }
    case SYM_MINUS:{
      jj_consume_token(SYM_MINUS);
      break;
      }
    case SYM_MULTIL:{
      jj_consume_token(SYM_MULTIL);
      break;
      }
    case SYM_DIVIDE:{
      jj_consume_token(SYM_DIVIDE);
      break;
      }
    case SYM_MOD:{
      jj_consume_token(SYM_MOD);
      break;
      }
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      break;
      }
    case SYM_DOT:{
      jj_consume_token(SYM_DOT);
      break;
      }
    case SYM_COMMA:{
      jj_consume_token(SYM_COMMA);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token;}
    throw new Error("Missing return statement in function");
  }

// Grammar
  final public Program Program() throws ParseException {Main main;
    Token tok;
    List<ClassDecl> cds = new ArrayList<ClassDecl>();
    ClassDecl cd;
    main = MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      cd = ClassDeclaration();
cds.add(cd);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(token, main, cds);}
    throw new Error("Missing return statement in function");
  }

  final public Main MainClass() throws ParseException {Statement state;
    Token tok;
    jj_consume_token(KW_CLASS);
    tok = Identifier();
    jj_consume_token(SYM_LBRACE);
    jj_consume_token(KW_PUBLIC);
    jj_consume_token(KW_STATIC);
    jj_consume_token(KW_VOID);
    jj_consume_token(KW_MAIN);
    jj_consume_token(SYM_LPAREN);
    jj_consume_token(KW_STRING);
    jj_consume_token(SYM_LBRACK);
    jj_consume_token(SYM_RBRACK);
    Identifier();
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    state = Statement();
    jj_consume_token(SYM_RBRACE);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new Main(tok, state);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDeclaration() throws ParseException {List<VarDecl> fields = new ArrayList<VarDecl>();
    VarDecl field;
    List<MethodDecl> methods = new ArrayList<MethodDecl>();
    MethodDecl method;
    Token tok, eggstends = null;
    String eggs = null;
    jj_consume_token(KW_CLASS);
    tok = Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      eggstends = Identifier();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(SYM_LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      field = VarDeclaration();
fields.add(field);
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      method = MethodDeclaration();
methods.add(method);
    }
    jj_consume_token(SYM_RBRACE);
if(eggstends != null)
            eggs = eggstends.toString();
        {if ("" != null) return new ClassDecl(tok, tok.toString() , eggs, fields, methods);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDeclaration() throws ParseException {Type type;
    Token tok;
    type = Type();
    tok = Identifier();
    jj_consume_token(SYM_SEMICOL);
{if ("" != null) return new VarDecl(tok, type, tok.toString());}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDeclaration() throws ParseException {Type retType, args;
    List<Parameter> parameters = new ArrayList<Parameter>();
    List<VarDecl> vds = new ArrayList<VarDecl>();
    List<Statement> body = new ArrayList<Statement>();
    Exp retExp;
    Token tok, argsTok;
    Statement stat;
    VarDecl vd;
    jj_consume_token(KW_PUBLIC);
    retType = Type();
    tok = Identifier();
    jj_consume_token(SYM_LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:
    case KW_BOOLEAN:
    case IDENTIFIER:{
      args = Type();
      argsTok = Identifier();
parameters.add(new Parameter(argsTok, args, argsTok.image));
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYM_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(SYM_COMMA);
        args = Type();
        argsTok = Identifier();
parameters.add(new Parameter(argsTok, args, argsTok.image));
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    label_6:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_6;
      }
      vd = VarDeclaration();
vds.add(vd);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_IF:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_SYSPRNT:
      case SYM_LBRACE:
      case SYM_LPAREN:
      case SYM_NOT:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      stat = Statement();
body.add(stat);
    }
    jj_consume_token(KW_RETURN);
    retExp = Expression();
    jj_consume_token(SYM_SEMICOL);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new MethodDecl(tok, retType, tok.toString(), parameters, vds, body, retExp);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {Token tok;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:{
      jj_consume_token(KW_INT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACK:{
        jj_consume_token(SYM_LBRACK);
        jj_consume_token(SYM_RBRACK);
{if ("" != null) return new TypeIntArray(token);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
{if ("" != null) return new TypeInt(token);}
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
{if ("" != null) return new TypeBoolean(token);}
      break;
      }
    case IDENTIFIER:{
      Identifier();
{if ("" != null) return new Type(token, token.toString());}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {List<Statement> body = new ArrayList<Statement>();
    Statement stat;
    Exp condition;
    Statement ifPart, elsePart = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_SYSPRNT:
        case SYM_LBRACE:
        case SYM_LPAREN:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_8;
        }
        stat = Statement();
body.add(stat);
      }
      jj_consume_token(SYM_RBRACE);
{if ("" != null) return new BlockStatement(token, body);}
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      ifPart = Statement();
      if (jj_2_2(2)) {
        jj_consume_token(KW_ELSE);
        elsePart = Statement();
      } else {
        ;
      }
{if ("" != null) return new IfStatement(token, condition, ifPart, elsePart);}
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      stat = Statement();
{if ("" != null) return new WhileStatement(token, condition, stat);}
      break;
      }
    case KW_SYSPRNT:{
      jj_consume_token(KW_SYSPRNT);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      jj_consume_token(SYM_SEMICOL);
{if ("" != null) return new PrintStatement(token, condition);}
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case SYM_NOT:
    case IDENTIFIER:
    case INT_LITERAL:{
      condition = Expression();
      jj_consume_token(SYM_SEMICOL);
{if ("" != null) return new ExpStatement(token, condition);}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp Expression() throws ParseException {Exp expr;
    expr = AssignExpr();
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AssignExpr() throws ParseException {Exp target, value;
    target = LogicOp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_EQ:{
      jj_consume_token(SYM_EQ);
      value = AssignExpr();
{if ("" != null) return new AssignExp(token, target, value);}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
{if ("" != null) return target;}
    throw new Error("Missing return statement in function");
  }

  final public Exp LogicOp() throws ParseException {Exp left;
    left = CmpOp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LOGAND:
      case SYM_LOGOR:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      left = LogicOpP(left);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Exp LogicOpP(Exp left) throws ParseException {Exp right;
    Token tok;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LOGAND:{
      tok = jj_consume_token(SYM_LOGAND);
      break;
      }
    case SYM_LOGOR:{
      tok = jj_consume_token(SYM_LOGOR);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = CmpOp();
{if ("" != null) return new BinaryExp(left, tok, right);}
    throw new Error("Missing return statement in function");
  }

  final public Exp CmpOp() throws ParseException {Exp left;
    left = AddOp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:
      case SYM_LESSEQ:
      case SYM_EQEQ:
      case SYM_NOTEQ:
      case SYM_GREAT:
      case SYM_GREATEQ:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      left = CmpOpP(left);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Exp CmpOpP(Exp left) throws ParseException {Exp right;
    Token tok;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LESS:{
      tok = jj_consume_token(SYM_LESS);
      break;
      }
    case SYM_LESSEQ:{
      tok = jj_consume_token(SYM_LESSEQ);
      break;
      }
    case SYM_EQEQ:{
      tok = jj_consume_token(SYM_EQEQ);
      break;
      }
    case SYM_NOTEQ:{
      tok = jj_consume_token(SYM_NOTEQ);
      break;
      }
    case SYM_GREAT:{
      tok = jj_consume_token(SYM_GREAT);
      break;
      }
    case SYM_GREATEQ:{
      tok = jj_consume_token(SYM_GREATEQ);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = AddOp();
{if ("" != null) return new BinaryExp(left, tok, right);}
    throw new Error("Missing return statement in function");
  }

  final public Exp AddOp() throws ParseException {Exp left, right;
    Token tok;
    left = MulOp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:
      case SYM_MINUS:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_11;
      }
      left = AddOpP(left);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AddOpP(Exp left) throws ParseException {Exp right;
    Token tok;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_PLUS:{
      tok = jj_consume_token(SYM_PLUS);
      break;
      }
    case SYM_MINUS:{
      tok = jj_consume_token(SYM_MINUS);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = MulOp();
{if ("" != null) return new BinaryExp(left, tok, right);}
    throw new Error("Missing return statement in function");
  }

  final public Exp MulOp() throws ParseException {Exp left, right;
    Token tok;
    left = UnaryOp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIL:
      case SYM_DIVIDE:
      case SYM_MOD:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      left = MulOpP(left);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Exp MulOpP(Exp left) throws ParseException {Exp right;
    Token tok;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_MULTIL:{
      tok = jj_consume_token(SYM_MULTIL);
      break;
      }
    case SYM_DIVIDE:{
      tok = jj_consume_token(SYM_DIVIDE);
      break;
      }
    case SYM_MOD:{
      tok = jj_consume_token(SYM_MOD);
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = UnaryOp();
{if ("" != null) return new BinaryExp(left, tok, right);}
    throw new Error("Missing return statement in function");
  }

  final public Exp UnaryOp() throws ParseException {Exp left;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      left = UnaryOp();
{if ("" != null) return new NotExp(token, left);}
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case IDENTIFIER:
    case INT_LITERAL:{
      left = PostfixOp();
{if ("" != null) return left;}
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
